--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.0",
+    "vuelidate": "^0.7.6",
+    "vuetify": "^2.5.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
