--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "lodash": "^4.17.21",
     "qs": "^6.10.1",
     "register-service-worker": "^1.7.1",
     "request": "^2.88.2",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "twit": "^2.2.11",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-socket.io": "^3.0.10",
+    "vue-tweet-embed": "^2.4.0",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.5.8",
     "vuex": "^3.4.0"
