Declare types and start cleaning up code

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run development",
+    "start": "npm run production",
     "development": "NODE_ENV=development concurrently --kill-others \"npm run client\" \"npm run server\"",
-    "production": "npm run build && NODE_ENV=production npm run server",
-    "client": "vue-cli-service serve",
+    "production": "NODE_ENV=production npm run server",
     "build": "vue-cli-service build",
+    "client": "vue-cli-service serve",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
@@ -18,9 +18,11 @@
     "concurrently": "^6.2.1",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
+    "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "qs": "^6.10.1",
     "register-service-worker": "^1.7.1",
     "request": "^2.88.2",
@@ -38,7 +40,10 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/elasticsearch": "^5.0.38",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.172",
+    "@types/vuelidate": "^0.7.15",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
