--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "production": "NODE_ENV=production npm run server",
     "build": "vue-cli-service build",
     "client": "vue-cli-service serve",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "NODE_ENV=test vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "server": "node server/server.js"
+    "server": "ts-node server/server.ts",
+    "type": "module"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.172",
+    "@types/request": "^2.48.7",
+    "@types/twit": "^2.2.30",
     "axios": "^0.21.1",
     "concurrently": "^6.2.1",
     "core-js": "^3.6.5",
@@ -26,7 +31,9 @@
     "request": "^2.88.2",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
+    "ts-node": "^10.2.1",
     "twit": "^2.2.11",
+    "typescript": "^4.4.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
@@ -38,9 +45,8 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@types/elasticsearch": "^5.0.38",
+    "@jest-mock/express": "^1.4.4",
     "@types/jest": "^24.0.19",
-    "@types/lodash": "^4.14.172",
     "@types/vuelidate": "^0.7.15",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -56,6 +62,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -64,7 +71,6 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
