--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "production": "NODE_ENV=production npm run server",
     "build": "vue-cli-service build",
     "client": "vue-cli-service serve",
-    "test:unit": "NODE_ENV=test vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "server": "ts-node server/server.ts",
+    "server": "ts-node server/listen.ts",
     "type": "module"
   },
   "dependencies": {
